fix: grid align

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -335,7 +335,7 @@ section
     li:nth-of-type(4)
       .imageGrid-Item_Wrapper
         width: 66.6666%
-        align-self: fflex-start
+        align-self: flex-start
     li:nth-of-type(5)
       .imageGrid-Item_Wrapper
         width: 33.3333%
